# metascaffold

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
config/: default_config.toml
docs/: architecture.md  research_sources.json
docs/plans/: 2026-03-03-metascaffold-design.md  2026-03-03-metascaffold-implementation.md  2026-03-03-metascaffold-v02-llm-pipeline.md  2026-03-03-metascaffold-v03-design.md  2026-03-03-metascaffold-v03-implementation.md
hooks/: post_tool_evaluate.py  pre_tool_gate.py
scripts/: cleanup_sources.py  ingest_to_notebooklm.py  nlm_login.py  query_nlm.py  source_research.py
src/metascaffold/: __init__.py  classifier.py  config.py  distiller.py  entropy.py  evaluator.py  llm_client.py  notebooklm_bridge.py  pipeline.py  planner.py  reflection_memory.py  reflector.py  sandbox.py  server.py  telemetry.py  verifiers.py
tests/: test_classifier.py  test_config.py  test_distiller.py  test_entropy.py  test_evaluator.py  test_hooks.py  test_integration.py  test_llm_client.py  test_notebooklm_bridge.py  test_pipeline.py  test_planner.py  test_reflection_memory.py  test_reflector.py  test_restart.py  test_sandbox.py  test_server.py  test_telemetry.py  test_verifiers.py
