[project]
name = "metascaffold"
version = "0.1.0"
description = "Metacognition plugin for Claude Code — dual-process System 1/2 architecture"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pydantic>=2.0",
    "notebooklm-py>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metascaffold"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
